examples/test/testpolicy6969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6969
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key2: value1
      key18: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value3
          key21: value45
          key2: value3
      podSelector:
        matchLabels:
          key7: value24
          key45: value24
